# openenv

./: .env.example  .gitignore  COMPLETION_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_READY.md  Dockerfile  HF_DEPLOYMENT_INSTRUCTIONS.md  README.md  REQUIREMENTS.md  START_HERE.md  SUBMISSION.md  SUMMARY.md  VALIDATION_REPORT.md  docker-compose.yml  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
email_triage_env/: __init__.py  environment.py  models.py  reward_engine.py  simulator.py
scripts/: test_local.py  validate.py
server/: app.py
