[project]
name = "email-triage-env"
version = "1.0.0"
description = "OpenEnv-compatible email triage environment"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.1.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "requests>=2.32.0",
    "openai>=1.56.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"